@@ -1,0 +1,9 @@
+﻿using UnityEngine;
+
+/// <summary>
+/// Used to indicate a Vector3 whose members are used as 0/1 toggles
+/// </summary>
+public class Vector3ToggleAttribute : PropertyAttribute 
+{
+
+}
