@@ -9,6 +9,7 @@ BREAKING CHANGES FROM UNITYSTEER 2.x:
 - New properties on AutonomousVehicle to control the acceleration and deceleration rates.
 - Using the AutonomousVehicle's DesiredSpeed to indicate the speed we're aiming for, and Speed the one we're actually moving at.  Speed will gradually aim for DesiredSpeed at its acceleration/deceleration rates.
 - SteerForWander.SmoothRate is now an amount per second. This causes it to no longer be framerate-dependent.
+- Replaced IsPlanar with AllowedMovementAxes. We can now limit movement on any arbitrary axis, not only the Y.
 
 You can read more about it here: http://arges-systems.com/blog/2014/01/30/unitysteer-acceleration-smoothing-changes/
 
